@@ -39,7 +39,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Iterator;
-import java.util.LinkedList;
 import java.util.List;
 
 /**
@@ -55,7 +54,8 @@ public class SamLocusIterator implements Iterable<SamLocusIterator.LocusInfo>, C
     private static final Log LOG = Log.getInstance(SamLocusIterator.class);
 
     /**
-     * A SAMRecord plus the zero-based offset in the read corresponding to the position in LocusInfo
+     * Holds a SAMRecord plus the zero-based offset into that SAMRecord's bases and quality scores that corresponds
+     * to the base and quality at the genomic position described the containing LocusInfo.
      */
     public static class RecordAndOffset {
         private final SAMRecord record;
@@ -66,30 +66,18 @@ public class SamLocusIterator implements Iterable<SamLocusIterator.LocusInfo>, C
             this.record = record;
         }
 
-        /**
-         * Zero-based offset into the read corresonding to the current position in LocusInfo
-         */
-        public int getOffset() {
-            return offset;
-        }
-
-        public SAMRecord getRecord() {
-            return record;
-        }
-
-        public byte getReadBase() {
-            return record.getReadBases()[offset];
-        }
-
-        public byte getBaseQuality() {
-            return record.getBaseQualities()[offset];
-        }
+        /** Zero-based offset into the read corresponding to the current position in LocusInfo */
+        public int getOffset() { return offset; }
+        public SAMRecord getRecord() { return record; }
+        public byte getReadBase() { return record.getReadBases()[offset]; }
+        public byte getBaseQuality() { return record.getBaseQualities()[offset]; }
     }
 
     /**
-     * The unit of iteration.  Holds the locus, plus a ReadAndOffset for each read that overlaps the locus
+     * The unit of iteration.  Holds information about the locus (the SAMSequenceRecord and 1-based position
+     * on the reference), plus List of ReadAndOffset objects, one for each read that overlaps the locus
      */
-    public static class LocusInfo implements Locus {
+    public static final class LocusInfo implements Locus {
         private final SAMSequenceRecord referenceSequence;
         private final int position;
         private final List<RecordAndOffset> recordAndOffsets = new ArrayList<RecordAndOffset>(100);
@@ -99,31 +87,18 @@ public class SamLocusIterator implements Iterable<SamLocusIterator.LocusInfo>, C
             this.position = position;
         }
 
-        /**
-         * Accumulate info for one read at the locus.
-         */
+        /** Accumulate info for one read at the locus. */
         public void add(final SAMRecord read, final int position) {
             recordAndOffsets.add(new RecordAndOffset(read, position));
         }
 
         public int getSequenceIndex() { return referenceSequence.getSequenceIndex(); }
 
-        /**
-         * @return 1-based reference position
-         */
+        /** @return 1-based reference position */
         public int getPosition() { return position; }
-
-        public List<RecordAndOffset> getRecordAndPositions() {
-            return Collections.unmodifiableList(recordAndOffsets);
-        }
-
+        public List<RecordAndOffset> getRecordAndPositions() { return Collections.unmodifiableList(recordAndOffsets); }
         public String getSequenceName() { return referenceSequence.getSequenceName(); }
-
-        @Override
-        public String toString() {
-            return referenceSequence.getSequenceName() + ":" + position;
-        }
-
+        @Override public String toString() { return referenceSequence.getSequenceName() + ":" + position; }
         public int getSequenceLength(){return referenceSequence.getSequenceLength();}
     }
 
@@ -137,12 +112,25 @@ public class SamLocusIterator implements Iterable<SamLocusIterator.LocusInfo>, C
     private final List<Interval> intervals;
     private final boolean useIndex;
 
-    // LocusInfos on this list are ready to be returned by iterator.  All reads that overlap
-    // the locus have been accumulated before the LocusInfo is moved into this list.
-    private final LinkedList<LocusInfo> complete = new LinkedList<LocusInfo>();
+    /**
+     * LocusInfos on this list are ready to be returned by iterator.  All reads that overlap
+     * the locus have been accumulated before the LocusInfo is moved into this list.
+     */
+    private final ArrayList<LocusInfo> complete = new ArrayList<LocusInfo>(100);
 
-    // LocusInfos for which accumulation is in progress
-    private final LinkedList<LocusInfo> accumulator = new LinkedList<LocusInfo>();
+    /**
+     * LocusInfos for which accumulation is in progress.  When {@link #accumulateSamRecord(SAMRecord)} is called
+     * the state of this list is guaranteed to be either:
+     *   a) Empty, or
+     *   b) That the element at index 0 corresponds to the same genomic locus as the first aligned base
+     *      in the read being accumulated
+     *
+     * Before each new read is accumulated the accumulator is examined and:
+     *   i) any LocusInfos at positions earlier than the read start are moved to {@link #complete}
+     *   ii) any uncovered positions between the last LocusInfo and the first aligned base of the new read
+     *       have LocusInfos created and added to {@link #complete} if we are emitting uncovered loci
+     */
+    private final ArrayList<LocusInfo> accumulator = new ArrayList<LocusInfo>(100);
 
     private int qualityScoreCutoff = Integer.MIN_VALUE;
     private int mappingQualityScoreCutoff = Integer.MIN_VALUE;
@@ -239,8 +227,10 @@ public class SamLocusIterator implements Iterable<SamLocusIterator.LocusInfo>, C
     }
 
     /**
-     * @return true if there are more aligned reads in the SAM file, LocusInfos in some stage of accumulation,
-     * or loci in the target mask that have yet to be covered.
+     * Returns true if there are more LocusInfo objects that can be returned, due to any of the following reasons:
+     *   1) there are more aligned reads in the SAM file
+     *   2) there are LocusInfos in some stage of accumulation
+     *   3) there are loci in the target mask that have yet to be accumulated (even if there are no reads covering them)
      */
     public boolean hasNext() {
         if (this.samIterator == null) {
@@ -250,14 +240,16 @@ public class SamLocusIterator implements Iterable<SamLocusIterator.LocusInfo>, C
         while (complete.isEmpty() && ((!accumulator.isEmpty()) || samHasMore() || hasRemainingMaskBases())) {
             final LocusInfo locusInfo = next();
             if (locusInfo != null) {
-                complete.addFirst(locusInfo);
+                complete.add(0, locusInfo);
             }
         }
         return !complete.isEmpty();
     }
 
     /**
-     * @return true if there are loci in the target mask that have yet to be covered by LocusInfos
+     * Returns true if there are more bases at which the locus iterator must emit LocusInfos because
+     * there are loci beyond the last emitted loci which are in the set of loci to be emitted and
+     * the iterator is setup to emit uncovered loci - so we can guarantee we'll emit those loci.
      */
     private boolean hasRemainingMaskBases() {
         // if there are more sequences in the mask, by definition some of them must have
@@ -300,13 +292,13 @@ public class SamLocusIterator implements Iterable<SamLocusIterator.LocusInfo>, C
 
             // emit everything that is before the start of the current read, because we know no more
             // coverage will be accumulated for those loci.
-            while (!accumulator.isEmpty() && locusComparator.compare(accumulator.getFirst(), alignmentStart) < 0) {
-                final LocusInfo first = accumulator.getFirst();
+            while (!accumulator.isEmpty() && locusComparator.compare(accumulator.get(0), alignmentStart) < 0) {
+                final LocusInfo first = accumulator.get(0);
                 populateCompleteQueue(alignmentStart);
                 if (!complete.isEmpty()) {
-                    return complete.removeFirst();
+                    return complete.remove(0);
                 }
-                if (!accumulator.isEmpty() && first == accumulator.getFirst()) {
+                if (!accumulator.isEmpty() && first == accumulator.get(0)) {
                     throw new SAMException("Stuck in infinite loop");
                 }
             }
@@ -314,8 +306,8 @@ public class SamLocusIterator implements Iterable<SamLocusIterator.LocusInfo>, C
             // at this point, either the accumulator list is empty or the head should
             // be the same position as the first base of the read
             if (!accumulator.isEmpty()) {
-                if (accumulator.getFirst().getSequenceIndex() != rec.getReferenceIndex() ||
-                        accumulator.getFirst().position != rec.getAlignmentStart()) {
+                if (accumulator.get(0).getSequenceIndex() != rec.getReferenceIndex() ||
+                        accumulator.get(0).position != rec.getAlignmentStart()) {
                     throw new IllegalStateException("accumulator should be empty or aligned with current SAMRecord");
                 }
             }
@@ -333,14 +325,14 @@ public class SamLocusIterator implements Iterable<SamLocusIterator.LocusInfo>, C
             while(!accumulator.isEmpty()) {
                 populateCompleteQueue(endLocus);
                 if (!complete.isEmpty()) {
-                    return complete.removeFirst();
+                    return complete.remove(0);
                 }
             }
         }
 
         // if there are completed entries, return those
         if (!complete.isEmpty()) {
-            return complete.removeFirst();
+            return complete.remove(0);
         } else if (emitUncoveredLoci){
             final Locus afterLastMaskPositionLocus = new LocusImpl(referenceSequenceMask.getMaxSequenceIndex(),
                     referenceSequenceMask.getMaxPosition() + 1);
@@ -357,25 +349,35 @@ public class SamLocusIterator implements Iterable<SamLocusIterator.LocusInfo>, C
      * creating new LocusInfos as needed.
      */
     private void accumulateSamRecord(final SAMRecord rec) {
+        final SAMSequenceRecord ref = getReferenceSequence(rec.getReferenceIndex());
+        final int alignmentStart  = rec.getAlignmentStart();
+        final int alignmentEnd    = rec.getAlignmentEnd();
+        final int alignmentLength = alignmentEnd - alignmentStart;
+
+        // Ensure there are LocusInfos up to and including this position
+        for (int i=accumulator.size(); i<=alignmentLength; ++i) {
+            accumulator.add(new LocusInfo(ref, alignmentStart + i));
+        }
+
+        final int minQuality = getQualityScoreCutoff();
+        final boolean dontCheckQualities = minQuality == 0;
+        final byte[] baseQualities = dontCheckQualities ? null : rec.getBaseQualities();
+
         // interpret the CIGAR string and add the base info
         for(final AlignmentBlock alignmentBlock : rec.getAlignmentBlocks()) {
-            for (int i = 0; i < alignmentBlock.getLength(); ++i) {
+            final int readStart   = alignmentBlock.getReadStart();
+            final int refStart    = alignmentBlock.getReferenceStart();
+            final int blockLength = alignmentBlock.getLength();
+
+            for (int i=0; i<blockLength; ++i) {
                 // 0-based offset into the read of the current base
-                final int readOffset = alignmentBlock.getReadStart() + i - 1;
-                // 1-based reference position that the current base aligns to
-                final int refPos = alignmentBlock.getReferenceStart() + i;
+                final int readOffset = readStart + i - 1;
 
-                // 0-based offset from the aligned position of the first base in the read to the aligned position
-                // of the current base.
-                final int refOffset =  refPos - rec.getAlignmentStart();
+                // 0-based offset from the aligned position of the first base in the read to the aligned position of the current base.
+                final int refOffset =  refStart + i - alignmentStart;
 
-                // Ensure there are LocusInfos up to and including this position
-                for (int j = accumulator.size(); j <= refOffset; ++j) {
-                    accumulator.add(new LocusInfo(getReferenceSequence(rec.getReferenceIndex()),
-                            rec.getAlignmentStart() + j));
-                }
                 // if the quality score cutoff is met, accumulate the base info
-                if (rec.getBaseQualities()[readOffset] >= getQualityScoreCutoff()) {
+                if (dontCheckQualities || baseQualities[readOffset] >= minQuality) {
                     accumulator.get(refOffset).add(rec, readOffset);
                 }
             }
@@ -396,8 +398,6 @@ public class SamLocusIterator implements Iterable<SamLocusIterator.LocusInfo>, C
                 return null;
             }
 
-
-
             final int nextbit = referenceSequenceMask.nextPosition(lastReferenceSequence, lastPosition);
 
             // try the next reference sequence
@@ -409,14 +409,14 @@ public class SamLocusIterator implements Iterable<SamLocusIterator.LocusInfo>, C
                 }
                 lastReferenceSequence++;
                 lastPosition = 0;
-            } else if (lastReferenceSequence < stopBeforeLocus.getSequenceIndex() ||
-                    nextbit < stopBeforeLocus.getPosition()) {
+            }
+            else if (lastReferenceSequence < stopBeforeLocus.getSequenceIndex() || nextbit < stopBeforeLocus.getPosition()) {
                 lastPosition = nextbit;
                 return new LocusInfo(getReferenceSequence(lastReferenceSequence), lastPosition);
-            } else if (nextbit >= stopBeforeLocus.getPosition()) {
+            }
+            else if (nextbit >= stopBeforeLocus.getPosition()) {
                 return null;
             }
-
         }
 
         return null;
@@ -432,14 +432,14 @@ public class SamLocusIterator implements Iterable<SamLocusIterator.LocusInfo>, C
     private void populateCompleteQueue(final Locus stopBeforeLocus) {
         // Because of gapped alignments, it is possible to create LocusInfo's with no reads associated with them.
         // Skip over these.
-        while (!accumulator.isEmpty() && accumulator.getFirst().getRecordAndPositions().isEmpty() &&
-               locusComparator.compare(accumulator.getFirst(), stopBeforeLocus) < 0) {
-            accumulator.removeFirst();
+        while (!accumulator.isEmpty() && accumulator.get(0).getRecordAndPositions().isEmpty() &&
+               locusComparator.compare(accumulator.get(0), stopBeforeLocus) < 0) {
+            accumulator.remove(0);
         }
         if (accumulator.isEmpty()) {
             return;
         }
-        final LocusInfo locusInfo = accumulator.getFirst();
+        final LocusInfo locusInfo = accumulator.get(0);
         if (locusComparator.compare(stopBeforeLocus, locusInfo) <= 0) {
             return;
         }
@@ -448,13 +448,13 @@ public class SamLocusIterator implements Iterable<SamLocusIterator.LocusInfo>, C
         if (emitUncoveredLoci) {
             final LocusInfo zeroCoverage = createNextUncoveredLocusInfo(locusInfo);
             if (zeroCoverage != null) {
-                complete.addLast(zeroCoverage);
+                complete.add(zeroCoverage);
                 return;
             }
         }
 
         // At this point we know we're going to process the LocusInfo, so remove it from the accumulator.
-        accumulator.removeFirst();
+        accumulator.remove(0);
 
         // fill in any gaps based on our genome mask
         final int sequenceIndex = locusInfo.getSequenceIndex();
@@ -462,7 +462,7 @@ public class SamLocusIterator implements Iterable<SamLocusIterator.LocusInfo>, C
 
         // only add to the complete queue if it's in the mask (or we have no mask!)
         if (referenceSequenceMask.get(locusInfo.getSequenceIndex(), locusInfo.getPosition())) {
-            complete.addLast(locusInfo);
+            complete.add(locusInfo);
         }
 
         lastReferenceSequence = sequenceIndex;
@@ -508,3 +508,4 @@ public class SamLocusIterator implements Iterable<SamLocusIterator.LocusInfo>, C
         this.emitUncoveredLoci = emitUncoveredLoci;
     }
 }
+
